@@ -17,6 +17,8 @@ Version 1.4+svn:
      portraits)
    * allow configure to be started from directories other as the top dir
      (patch #1002)
+   * learn the underlaying terrain so you'll not have a blank like in the unit
+     stats if you encounter a terain aliased to a unencountered terrain
 
 Version 1.4:
  * language and i18n:
